Prevent automatic text size adjustment on iOS rotation

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -1,3 +1,7 @@
+html {
+    -webkit-text-size-adjust: 100%;
+}
+
 /* -------------------------------------------------- */
 
 .material-symbols-rounded {
